lsp_diag_errors.txt
warning: unused imports: `DerefMut` and `Deref`
 --> gridmesh\src\tensor.rs:3:16
  |
3 | use std::ops::{Deref, DerefMut};
  |                ^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `gridmesh` (lib) generated 1 warning (run `cargo fix --lib -p gridmesh` to apply 1 suggestion)
warning: unused import: `anyhow`
 --> src\compiler.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::process::Command`
 --> src\compiler.rs:8:5
  |
8 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `take_while1` and `tuple`
 --> src\interface\parser.rs:3:28
  |
3 |     bytes::complete::{tag, take_while1},
  |                            ^^^^^^^^^^^
...
7 |     sequence::{delimited, pair, preceded, tuple},
  |                                           ^^^^^

warning: unused import: `Param`
 --> src\languages\python\mod.rs:3:49
  |
3 | ...Options, FunctionSig, Param, WitType};
  |                          ^^^^^

warning: unused import: `Param`
 --> src\languages\rust\mod.rs:3:49
  |
3 | ...Options, FunctionSig, Param, WitType};
  |                          ^^^^^

warning: unused import: `FunctionSig`
 --> src\wit_gen.rs:5:20
  |
5 | use crate::types::{FunctionSig, WitType};
  |                    ^^^^^^^^^^^

warning: use of deprecated function `nom::sequence::tuple`: `Parser` is directly implemented for tuples
 --> src\interface\parser.rs:7:43
  |
7 |     sequence::{delimited, pair, preceded, tuple},
  |                                           ^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: unused variable: `i`
  --> src\compiler.rs:32:10
   |
32 |     for (i, block) in parsed.blocks.iter().enumerate...
   |          ^ help: if this is intentional, prefix it with an underscore: `_i`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `opts`
  --> src\compiler.rs:58:38
   |
58 | ...les: &[Vec<u8>], opts: &CompileOptions) -> Result...
   |                     ^^^^ help: if this is intentional, prefix it with an underscore: `_opts`

warning: unused variable: `remaining`
  --> src\interface\parser.rs:68:10
   |
68 |     let (remaining, items) = many0(preceded(
   |          ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_remaining`

warning: function `parse_struct` is never used
  --> src\interface\parser.rs:81:4
   |
81 | fn parse_struct(input: &str) -> IResult<&str, Struct...
   |    ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `parse_field` is never used
   --> src\interface\parser.rs:102:4
    |
102 | fn parse_field(input: &str) -> IResult<&str, Field> {
    |    ^^^^^^^^^^^

warning: method `to_lang_type` is never used
  --> src\languages\python\mod.rs:16:8
   |
11 | impl Python {
   | ----------- method in this implementation
...
16 |     fn to_lang_type(&self, wit_type: &WitType, optio...
   |        ^^^^^^^^^^^^

warning: `polyglot` (lib) generated 13 warnings (run `cargo fix --lib -p polyglot` to apply 9 suggestions)
    Checking poly-lsp v0.1.0 (C:\Users\adria\Downloads\pyrs polygot\pyrs\poly-lsp)
warning: unused import: `Result`
 --> poly-lsp\src\delegator.rs:8:14
  |
8 | use anyhow::{Result, anyhow};
  |              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `anyhow`
 --> poly-lsp\src\json_rpc.rs:1:22
  |
1 | use anyhow::{Result, anyhow};
  |                      ^^^^^^

warning: variable does not need to be mutable
  --> poly-lsp\src\delegator.rs:38:21
   |
38 |                 let mut c = Command::new("rust-analyzer");
   |                     ----^
   |                     |
   |                     help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: borrow of moved value: `diag_params.diagnostics`
  --> poly-lsp\src\main.rs:90:51
   |
69 |                      if let Ok(mut diag_params) = serde_json::from_value::<PublishDiagnosticsParams>(params.clone()) {
   |                                --------------- this reinitialization might get skipped
...
90 |                                       for diag in &mut diag_params.diagnostics {
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ value borrowed here after move
...
97 |                                           diag_params.diagnostics,
   |                                           ----------------------- value moved here, in previous iteration of loop
   |
   = note: move occurs because `diag_params.diagnostics` has type `Vec<tower_lsp::lsp_types::Diagnostic>`, which does not implement the `Copy` trait

warning: unused variable: `vfiles`
   --> poly-lsp\src\main.rs:149:18
    |
149 |              let vfiles = self.vfm.update_file(
    |                  ^^^^^^ help: if this is intentional, prefix it with an underscore: `_vfiles`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0382`.
warning: `poly-lsp` (bin "poly-lsp") generated 4 warnings
error: could not compile `poly-lsp` (bin "poly-lsp") due to 1 previous error; 4 warnings emitted
